Android alignment bug

--- a/style.css
+++ b/style.css
@@ -3,8 +3,15 @@
 }
 
 .rock-wrapper {
-    top: 50%;
+    top: 0;
+    left: 0;
     position: fixed;
-    width: 100%;
-    text-align: center;
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+}
+
+.rock {
+    align-self: center;
 }
